--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-icons": "^2.2.7",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "uuid": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
